--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
       </div>
       <div class="resume">
-        <a href="#">Resume</a>
+        <a href="https://m.zhipin.com/geekTinyResume?sid=self&securityId=ezxnwZqsWnhC21qs5Lroce-9lE7ET09pfJ9zeLOSFhRiwsXSvedJU9dufUSRYw27863Xg1kAUpBW9irm3jsSLpfDrIPtrYzWevk2w6EHD_8TAgHFw9DX9GO-D9fq6E9IWqRcR5A~&from=singlemessage&isappinstalled=0">Resume</a>
       </div>
     </header>
     <section>
