--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="swiper-button-next"></div>
     </section>
     <footer>
-      <div>UI Design / Web Design / Icon / Animation</div>
+      <div>UI Design / Web Design / Icon / Animation / UED </div>
       <div>
         <ul>
           <li>
