--- a/index.html
+++ b/index.html
@@ -28,47 +28,47 @@
       <div class="swiper-container">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <a href="https://dribbble.com/shots/5070668-Wechat-Applet" target="_blank">
+            <a href="https://www.zcool.com.cn/work/ZMjk2NTU0NjQ=.html" target="_blank">
               <img src="./images/1.png">
             </a>
           </div>
           <div class="swiper-slide">
-            <a href="https://dribbble.com/shots/5058218-Sonicmoving" target="_blank">
+            <a href="https://www.zcool.com.cn/work/ZMjk5OTczODg=.html" target="_blank">
               <img src="./images/2.png">
             </a>
           </div>
           <div class="swiper-slide">
-            <a href="https://dribbble.com/shots/5070069-payment" target="_blank">
+            <a href="https://wengzhiwei.zcool.com.cn/" target="_blank">
               <img src="./images/3.png">
             </a>
           </div>
           <div class="swiper-slide">
-            <a href="https://dribbble.com/shots/5070059-branding" target="_blank">  
+            <a href="https://www.zcool.com.cn/work/ZMjk2MzM0MDA=.html" target="_blank">  
               <img src="./images/4.png">
             </a>
           </div>
           <div class="swiper-slide">
-            <a href="https://dribbble.com/shots/5103030-WeChat" target="_blank">  
+            <a href="https://www.zcool.com.cn/work/ZMzAwNTE5ODA=.html" target="_blank">  
               <img src="./images/5.png">
             </a>
           </div>
           <div class="swiper-slide">
-            <a href="https://dribbble.com/shots/5103034-icon" target="_blank">  
+            <a href="https://www.zcool.com.cn/work/ZMzAwNTAzODA=.html" target="_blank">  
               <img src="./images/6.png">
             </a>
           </div>
           <div class="swiper-slide">
-            <a href="https://dribbble.com/shots/5102659-TU-design" target="_blank">  
+            <a href="https://wengzhiwei.zcool.com.cn/" target="_blank">  
               <img src="./images/7.png">
             </a>
           </div>
           <div class="swiper-slide">
-            <a href="https://dribbble.com/shots/5102655-TU-design" target="_blank">  
+            <a href="https://wengzhiwei.zcool.com.cn/"_blank">  
               <img src="./images/8.png">
             </a>
           </div>
           <div class="swiper-slide">
-            <a href="https://dribbble.com/shots/5102656-TU-design" target="_blank">  
+            <a href="https://wengzhiwei.zcool.com.cn/" target="_blank">  
               <img src="./images/9.png">
             </a>
           </div>
