--- a/index.html
+++ b/index.html
@@ -72,6 +72,16 @@
               <img src="./images/9.png">
             </a>
           </div>
+          <div class="swiper-slide">
+            <a href="https://my.zcool.com.cn/preview/work/ZMzM0NzQ2MjA=.html"_blank">  
+              <img src="./images/10.png">
+            </a>
+          </div>
+          <div class="swiper-slide">
+            <a href="https://my.zcool.com.cn/works"_blank">  
+              <img src="./images/11.png">
+            </a>
+          </div>
         </div>
       </div>
       <div class="swiper-button-prev"></div>
