--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </a>
           </div>
           <div class="swiper-slide">
-            <a href="https://wengzhiwei.zcool.com.cn/" target="_blank">
+            <a href="https://my.zcool.com.cn/preview/work/ZMzM0ODEwMjg=.html" target="_blank">
               <img src="./images/3.png">
             </a>
           </div>
