--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </a>
           </div>
           <div class="swiper-slide">
-            <a href="https://www.zcool.com.cn/work/ZMzAwNTAzODA=.html" target="_blank">  
+            <a href="https://www.zcool.com.cn/work/ZMjA4NTM2NTI=.html" target="_blank">  
               <img src="./images/6.png">
             </a>
           </div>
