--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </a>
           </div>
           <div class="swiper-slide">
-            <a href="https://my.zcool.com.cn/preview/work/ZMzM0ODEwMjg=.html" target="_blank">
+            <a href="https://www.zcool.com.cn/work/ZMzM0ODEwMjg=.html" target="_blank">
               <img src="./images/3.png">
             </a>
           </div>
@@ -58,7 +58,7 @@
             </a>
           </div>
           <div class="swiper-slide">
-            <a href="https://wengzhiwei.zcool.com.cn/" target="_blank">  
+            <a href="https://www.zcool.com.cn/work/ZMzAwNTAzODA=.html"_blank">  
               <img src="./images/7.png">
             </a>
           </div>
@@ -73,12 +73,12 @@
             </a>
           </div>
           <div class="swiper-slide">
-            <a href="https://my.zcool.com.cn/preview/work/ZMzM0NzQ2MjA=.html"_blank">  
+            <a href="https://www.zcool.com.cn/work/ZMzM0NzQ2MjA=.html"_blank">  
               <img src="./images/10.png">
             </a>
           </div>
           <div class="swiper-slide">
-            <a href="https://my.zcool.com.cn/works"_blank">  
+            <a href="https://wengzhiwei.zcool.com.cn/"_blank">  
               <img src="./images/11.png">
             </a>
           </div>
